# web-fetch-mcp

./: Cargo.toml  README.md  opencode.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
src/: fetch_tool.rs  main.rs  robots.rs  ssrf.rs
